--- a/text/pages/index/index.wxml
+++ b/text/pages/index/index.wxml
@@ -1,10 +1,8 @@
-<!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+<text>这是正常的一行</text>
+<text>这还是正常的一行</text>
+<text>
+	这是第一个坑
+</text>
+<text>
+	这是第二个坑
+</text>
