--- a/bindtap与catchtap区别/pages/index/index.wxss
+++ b/bindtap与catchtap区别/pages/index/index.wxss
@@ -2,7 +2,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	height: 80px;
+	height: 50px;
+	border-bottom: 1px solid #ddd;
+	margin: 10px;
 }
 
 
