getSuggestion得到搜索结果

--- a/仿饿了么地址定位、筛选与回传/pages/index/index.wxml
+++ b/仿饿了么地址定位、筛选与回传/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
 <view>
 	<image src="../../images/location.png" />
-	<text>{{location}}</text>
+	<text bindtap="navigateToSearch">{{location}}</text>
 </view>
