渲染了搜索结果列表

--- a/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
+++ b/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
@@ -6,3 +6,10 @@
 	<text>{{location}}</text>
 	<image src="../../images/geo.png" />
 </view>
+<view class="header">搜索地址</view>
+<view class="list">
+	<view class="item" bindtap="addressTapped" wx:for="{{result}}" wx:key="">
+		<text class="title">{{item.title}}</text>
+		<text class="address">{{item.address}}</text>
+	</view>
+</view>
