自动加载10个热点，搜索结束限定加载当前城市

--- a/仿饿了么地址定位、筛选与回传/pages/index/index.wxml
+++ b/仿饿了么地址定位、筛选与回传/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
 <view>
 	<image src="../../images/location.png" />
-	<text bindtap="navigateToSearch">{{location}}</text>
+	<text bindtap="navigateToSearch">{{address}}</text>
 </view>
