--- a/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
+++ b/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
@@ -3,12 +3,12 @@
 </view>
 <view class="header">当前地址</view>
 <view class="current">
-	<text>{{location}}</text>
+	<text>{{address}}</text>
 	<image src="../../images/geo.png" />
 </view>
 <view class="header">搜索地址</view>
 <view class="list">
-	<view class="item" bindtap="addressTapped" data-address="{{item.address}}" wx:for="{{result}}" wx:key="">
+	<view class="item" bindtap="addressTapped" data-title="{{item.title}}" wx:for="{{result}}" wx:key="">
 		<text class="title">{{item.title}}</text>
 		<text class="address">{{item.address}}</text>
 	</view>
