--- a/仿饿了么地址定位、筛选与回传/pages/search/search.wxss
+++ b/仿饿了么地址定位、筛选与回传/pages/search/search.wxss
@@ -1,24 +1,26 @@
 /*搜索框*/
 .searcher {
 	background: #009cf9;
+	padding: 20px;
 }
 
 .searcher input {
-	margin: 0 10px;
-	padding: 8px;
+	padding: 6px 8px;
 	background: white;
-	font-size: 12px;
+	font-size: 14px;
 	color: #ccc;
+	border-radius: 5px;
 }
 
 .placeholder-class {
 	color: #ccc;
+	text-align: center;
 }
 
 /*标题头*/
 .header {
 	background: #eee;
-	font-size: 12px;
+	font-size: 14px;
 	padding: 10px;
 	line-height: 24px;
 	color: #444;
@@ -34,7 +36,7 @@
 }
 
 .current text {
-	font-size: 12px;
+	font-size: 14px;
 }
 
 .current image {
