当前定位的地理位置点击回传首页

--- a/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
+++ b/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
@@ -3,7 +3,7 @@
 </view>
 <view class="header">当前地址</view>
 <view class="current">
-	<text>{{address}}</text>
+	<text bindtap="geoTapped">{{address}}</text>
 	<image src="../../images/geo.png" />
 </view>
 <view class="header">搜索地址</view>
