--- a/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
+++ b/仿饿了么地址定位、筛选与回传/pages/search/search.wxml
@@ -4,7 +4,7 @@
 <view class="header">当前地址</view>
 <view class="current">
 	<text bindtap="geoTapped">{{address}}</text>
-	<image src="../../images/geo.png" />
+	<image bindtap="reloadCurrent" src="../../images/geo.png" />
 </view>
 <view class="header">搜索地址</view>
 <view class="list">
