--- a/顶部Tab导航/pages/index/index.wxml
+++ b/顶部Tab导航/pages/index/index.wxml
@@ -10,11 +10,11 @@
         <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
       </view>
       <view class="weui-tab__panel">
-        <view class="weui-tab__content" hidden="{{activeIndex != 0}}">选项一的内容</view>
-        <view class="weui-tab__content" hidden="{{activeIndex != 1}}">选项二的内容
-        </view>
-        <view class="weui-tab__content" hidden="{{activeIndex != 2}}">选项三的内容</view>
-        <view class="weui-tab__content" hidden="{{activeIndex != 3}}">选项四的内容</view>
+        <swiper>
+          <swiper-item wx:for="[0, 1, 2, 3]">
+            <view class="weui-tab__content">选项{{index}}的内容</view>
+          </swiper-item>
+        </swiper>
       </view>
     </view>
   </view>
