--- a/CSS动画停留在动画最后一帧/pages/index/index.wxml
+++ b/CSS动画停留在动画最后一帧/pages/index/index.wxml
@@ -1,3 +1,2 @@
-<view class="{{fade}} init"></view>
-<button type="primary" bindtap="fadeInMe">fadeIn</button>
+<view class="{{fade}}"></view>
 <button type="primary" bindtap="fadeOutMe">fadeOut</button>
